# survey-gauge

./: README.md  pyproject.toml
Notebooks/: Complete_Pipeline.ipynb
examples/: capitals_questionnaire.yml  capitals_scenarios.yml  classification.yml  example_external_api.ipynb  example_survey_server.ipynb  example_vllm.ipynb  intersubjective_scenarios.yml  questionnaire.yml  scenarios.yml
notebooks/: example_external_api.ipynb  example_run.ipynb  input_eval.ipynb  inputs.ipynb  results.csv
src/survey_gauge/: BaseEvaluator.py  Evaluator.py  SurveyServer.py  __init__.py
src/survey_gauge/Data/: Questionnaire.py  Scenario.py  __init__.py
src/survey_gauge/EvaluationPipeline/: Embedder.py  Evaluator.py  ScoreTracker.py  Server_LM.py  __init__.py
src/survey_gauge/EvaluationPipeline/LLM_Interactors/: LlmInstructorInterface.py  LlmInteract.py  __init__.py
