[project]
name = "survey-gauge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Matteo Figini", email = "matteo5.figini@mail.polimi.it" }
]
requires-python = ">=3.13"
dependencies = [
    "asyncio>=4.0.0",
    "pydantic>=2.12.5",
    "vllm>=0.16.0",
]

[project.scripts]
survey-gauge = "survey_gauge:main"

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
