[project]
name = "survey-gauge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Matteo Figini", email = "matteo5.figini@mail.polimi.it" }
]
requires-python = ">=3.13, <3.14"
dependencies = [
    "asyncio>=4.0.0",
    "groq>=0.33.0",
    "hnswlib>=0.8.0",
    "instructor[groq]>=1.14.5",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "pydantic>=2.12.5",
    "runstats>=2.0.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.3.0",
    "statsmodels>=0.14.6",
    "vllm>=0.16.0",
]

[project.scripts]
survey-gauge = "survey_gauge:main"

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
