[project]
name = "survey-gauge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Matteo Figini", email = "matteo5.figini@mail.polimi.it" }
]
requires-python = ">=3.12, <3.14"
dependencies = [
    "asyncio>=4.0.0",
    "hnswlib>=0.8.0",
    "instructor>=1.15.1",
    "pydantic>=2.12.5",
    "sentence-transformers>=5.3.0",
    "tqdm>=4.67.3",
]

[project.scripts]
survey-gauge = "survey_gauge:main"

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
